--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ sidebar: false
         <h3>Commands</h3>
         <div class="commands">
 {% highlight sh %}
-ufo ship
-ufo ps
-ufo scale
-ufo destroy
-ufo build
+ufo destroy  # Destroy the ECS service.
+ufo exec     # Exec into container
+ufo logs     # Prints out logs
+ufo ps       # Show process info on ECS service.
+ufo ship     # Deploy app to ECS
 {% endhighlight %}
         </div>
       </div>
