--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@ sidebar: false
         <h3>Commands</h3>
         <div class="commands">
 {% highlight sh %}
-ufo ship     # Deploy app to ECS
-ufo ps       # Show process info on ECS service.
-ufo logs     # Prints out logs
+ufo ship     # Deploy stack
+ufo ps       # Show processes
+ufo logs     # Prints logs
 ufo exec     # Exec into container
-ufo destroy  # Destroy the ECS service.
+ufo destroy  # Destroy stack
 {% endhighlight %}
         </div>
       </div>
